# worldcat-client

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  requirements.development.txt  requirements.distribution.txt  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
source/worldcatclient/: __init__.py
source/worldcatclient/client/: __init__.py
source/worldcatclient/configuration/: __init__.py
source/worldcatclient/constants/: __init__.py
source/worldcatclient/data/configuration/: required.spec
source/worldcatclient/enumerations/: __init__.py
source/worldcatclient/exceptions/: __init__.py
source/worldcatclient/logging/: __init__.py
source/worldcatclient/records/: __init__.py  base.py  cataloging.py  record.py
source/worldcatclient/session/: __init__.py
source/worldcatclient/utilities/: __init__.py
tests/: conftest.py  test_auth.py  test_client.py
